project: add ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Editors
+.vscode
+*.code-workspace
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -7,9 +11,8 @@
 
 # Test binary, built with `go test -c`
 *.test
+bin
+dist/
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
