--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,8 @@
 ---
-name: golangci-lint
+name: Lint
 
 on:
   push:
-    tags:
-      - v*
     branches:
       - main
   pull_request:
@@ -13,13 +11,15 @@ permissions:
   contents: read
 
 jobs:
-  golangci:
-    name: lint
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v3
         with:
           go-version: '1.20'
+
       - uses: actions/checkout@v3
+
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
