--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,33 +7,27 @@ on:
       - 'v*'
 
 jobs:
-  release:
-    name: Create Release
-
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '1.20'
+
+      - uses: actions/checkout@v3
+
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Changelog
-        uses: scottbrenner/generate-changelog-action@master
-        id: changelog
-
-      - name: Create Release
-        id: create-release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.CR_PAT }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            ${{ steps.Changelog.outputs.changelog }}
-          draft: false
-          prerelease: false
 
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -62,3 +56,20 @@ jobs:
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.CR_PAT }}
+
+      - name: Changelog
+        uses: scottbrenner/generate-changelog-action@master
+        id: changelog
+
+      - name: Create Release
+        id: create-release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.CR_PAT }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            ${{ steps.Changelog.outputs.changelog }}
+          draft: false
+          prerelease: false
