--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
         uses: golangci/golangci-lint-action@v3
 
   release:
+    needs: lint
     name: Release
     runs-on: ubuntu-latest
     steps:
