--- a/.editorconfig
+++ b/.editorconfig
@@ -9,15 +9,11 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 charset = utf-8
 
-[*.{yml,yaml}]
+[*.{yml,yaml,cjs,css,vue}]
 indent_size = 2
 indent_style = space
 
-[*.go]
-indent_size = 4
-indent_style = tab
-
-[Makefile]
+[*.go,Makefile]
 indent_size = 4
 indent_style = tab
 
